src/styles/globals.css
/* ... */
.btn-dark:hover {
    background-color: #c2c3c7 !important;
}

.btn-primary {
    background-color: var(--sw360-primary-color) !important;
    border-color: var(--sw360-primary-color) !important;
    color: #272833 !important;
}

.btn-primary:focus {
    background-color: var(--sw360-primary-color) !important;
    border-color: white !important;
}

.btn-primary:hover {
    background-color: var(--sw360-primary-color) !important;
    border-color: transparent !important;
    color: #fff !important;
}

.btn-outline-primary {
    border-color: var(--sw360-primary-color) !important;
    color: var(--sw360-primary-color) !important;
}

.btn-outline-primary:hover {
    background-color: #fffdfb !important;
    border-color: var(--sw360-primary-color) !important;
    color: var(--sw360-primary-color) !important;
}

.gridjs-wrapper {
    border-radius: 0px;
}

.nav-pills .nav-link {
    background-color: #f2f2f2 !important;
    color: #f2a922 !important;
}

.nav-pills .nav-link:hover {
    background-color: #f2f2f2 !important;
    color: #21719c !important;
}

.nav-pills .nav-link.active {
    background-color: #0c70f2 !important;
    color: white !important;
}

.link {
    color: var(--sw360-primary-color);
    text-decoration: none;
}

.dropdown-item:focus {
    background-color: lightgray !important;
}

.loaded {
    opacity: 1;
    transition: all 0.2ms ease-in;
}

.loading {
    opacity: 0;
    transition: all 0.2ms ease-in;
}

.row {
    display: flex;
    flex-wrap: wrap;
    margin-right: -12px;
    margin-left: -12px;
}

.card-deck {
    display: flex;
    flex-flow: row wrap;
    margin-left: -12px;
    margin-right: -12px;
}
.card-deck .card {
    flex: 1 0 0%;
    margin-bottom: 0;
    margin-left: 12px;
    margin-right: 12px;
}

.card-header:first-child {
    border-radius: calc(0.25rem - 0px) calc(0.25rem - 0px) 0 0;
}

.card-header {
    border-bottom: 0px solid rgba(0, 0, 0, 0.125);
    padding: 0.75rem 1.25rem;
    color: white;
    background-color: var(--sw360-primary-background-color);
    font-weight: bold;
}

.card-body {
    padding-bottom: 1rem;
    padding-left: 1rem;
    padding-right: 1rem;
    padding-top: 1rem;
    background-color: #ebf0f5;
}

.sw360-button {
    background-color: var(--sw360-primary-color);
    width: 100%;
}

.nav-link {
    color: var(--sw360-navlink-color);
    font-size: 0.95rem;
    font-weight: 600;
}

.nav-link:hover {
    color: var(--sw360-navlink-hover-color) !important;
    border-bottom-color: var(--sw360-primary-color) !important;
}

.heading-div {
    background-color: #fafafa;
    color: #272833;
    border-style: solid none solid none;
    border-width: 1px;
    border-color: #e7e7ed;
    padding-left: 64px;
    padding-top: 5px;
    padding-bottom: 5px;
    font-size: 14px;
    font-weight: bold;
    font-family: Arial, Helvetica, sans-serif;
}

.logo {
    padding-left: 40px;
}

.btn-icon {
    text-decoration: none !important;
    color: #6c757d !important;
}

.btn-icon:hover {
    text-decoration: underline !important;
    color: var(--sw360-primary-color) !important;
}

.btn-light {
    background-color: #f1f2f5 !important;
    border-color: #f1f2f5 !important;
    color: #000000 !important;
}

.btn-light:focus {
    background-color: #f1f2f5 !important;
    border-color: #f1f2f5 !important;
    color: #000000 !important;
}

.btn-light:active {
    background-color: #f1f2f5 !important;
    border-color: #f1f2f5 !important;
    color: #000000 !important;
}

.btn-light:hover {
    background-color: #e2e4ea;
    border-color: transparent;
    color: #000000;
}

.header-underline {
    color: #5d8ea9;
    border-color: #5d8ea9 !important;
}

.header {
    background-color: #5d8ea9;
    color: white;
}

.text-link {
    text-decoration: none;
    color: var(--sw360-primary-color);
}

.text-link:visited {
    text-decoration: none;
    color: var(--sw360-primary-color);
}

.text-link:hover {
    text-decoration: underline;
    color: var(--sw360-primary-background-color);
}

.list-group-item-action {
    background-color: white !important;
    color: #6b6c7e !important;
}

.list-group-item-action.active {
    background-color: #fcba76 !important;
    border-color: lightgray !important;
    color: black !important;
}

.list-group-item-action:hover {
    background-color: #f4e4d5 !important;
}

.list-group-item-action:hover.active {
    background-color: #fcba76 !important;
    color: black !important;
}

.buttonheader-title {
    justify-content: flex-end;
    align-items: center;
    margin-top: -0.5rem;
    font-size: 1.5rem;
    text-align: right;
    text-transform: uppercase;
    white-space: nowrap;
    color: rgba(108, 117, 125, 0.4);
}

.form-control:focus,
.form-control.focus {
    background-color: #f0f5ff;
    border-color: #80acff;
    box-shadow: 0 0 0 0.125rem #fff, 0 0 0 0.25rem #fbca8f;
    color: #272833;
    outline: 0;
}

.button-search,
.button-search:focus,
.button-search:active {
    width: 100% !important;
    display: block;
    background-color: #f28809 !important;
    border-color: #dbdce4 !important;
    color: black !important;
}
.button-search:hover {
    width: 100% !important;
    display: block;
    background-color: #f28809 !important;
    border-color: #dbdce4 !important;
    color: white !important;
}

.button,
.button:focus,
.button:active {
    background-color: #f28809 !important;
    border-color: #dbdce4 !important;
    color: black !important;
}
.button:hover {
    background-color: #f28809 !important;
    border-color: #dbdce4 !important;
    color: white !important;
}

.button-plain,
.button-plain:focus,
.button-plain:active {
    border-color: #dbdce4 !important;
    color: #6b6c7e !important;
    background-color: white !important;
}
.button-plain:hover {
    border-color: #dbdce4 !important;
    color: black !important;
    background-color: #f8f9fa !important;
}
/* ... */

